@@ -1,5 +1,14 @@
 2005-06-05  Ross Burton  <ross@burtonini.com>
 
+	* src/Makefile.am:
+	* src/bacon-message-connection.[ch]:
+	* src/update-from-bacon.sh:
+	* src/sj-main.c:
+	Pull in BaconMessageConnection and use it to re-use existing
+	instances (Bastien Nocera)
+
+2005-06-05  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-main.c:
 	Check for a Glade file in the build tree first (patch from Bastien
 	Nocera).
